@@ -8,7 +8,7 @@
 #    X_AC_META
 #
 #  DESCRIPTION:
-#    Set metadata tags from the META file.
+#    Read metadata tags from the META file.
 ##*****************************************************************************
 
 AC_DEFUN([X_AC_META], [
@@ -19,8 +19,7 @@ AC_DEFUN([X_AC_META], [
   if test -f "$META"; then
     _x_ac_meta_got_file=yes
 
-    META_NAME="`perl -ne \
-      'print,exit if s/^\s*(?:NAME|PROJECT|PACKAGE):\s*(\S+).*/\1/i' $META`"
+    META_NAME=_X_AC_META_GETVAL([(?:NAME|PROJECT|PACKAGE)]);
     if test -n "$META_NAME"; then
       AC_DEFINE_UNQUOTED([META_NAME], ["$META_NAME"],
         [Define the project name.]
@@ -28,8 +27,7 @@ AC_DEFUN([X_AC_META], [
       AC_SUBST([META_NAME])
     fi
 
-    META_VERSION="`perl -ne \
-      'print,exit if s/^\s*VERSION:\s*(\S+).*/\1/i' $META`"
+    META_VERSION=_X_AC_META_GETVAL([VERSION]);
     if test -n "$META_VERSION"; then
       AC_DEFINE_UNQUOTED([META_VERSION], ["$META_VERSION"],
         [Define the project version.]
@@ -37,8 +35,7 @@ AC_DEFUN([X_AC_META], [
       AC_SUBST([META_VERSION])
     fi
 
-    META_RELEASE="`perl -ne \
-      'print,exit if s/^\s*RELEASE:\s*(\S+).*/\1/i' $META`"
+    META_RELEASE=_X_AC_META_GETVAL([RELEASE]);
     if test -n "$META_RELEASE"; then
       AC_DEFINE_UNQUOTED([META_RELEASE], ["$META_RELEASE"],
         [Define the project release.]
@@ -50,13 +47,12 @@ AC_DEFUN([X_AC_META], [
         META_ALIAS="$META_NAME-$META_VERSION"
         test -n "$META_RELEASE" && META_ALIAS="$META_ALIAS-$META_RELEASE"
         AC_DEFINE_UNQUOTED([META_ALIAS], ["$META_ALIAS"],
-          [Define the project alias string (name-version-release).]
+          [Define the project alias string (name-ver or name-ver-rel).]
         )
         AC_SUBST([META_ALIAS])
     fi
 
-    META_DATE="`perl -ne \
-      'print,exit if s/^\s*DATE:\s*(\S+).*/\1/i' $META`"
+    META_DATE=_X_AC_META_GETVAL([DATE]);
     if test -n "$META_DATE"; then
       AC_DEFINE_UNQUOTED([META_DATE], ["$META_DATE"],
         [Define the project release date.] 
@@ -64,8 +60,7 @@ AC_DEFUN([X_AC_META], [
       AC_SUBST([META_DATE])
     fi
 
-    META_AUTHOR="`perl -ne \
-      'print,exit if s/^\s*AUTHOR:\s*(\S+).*/\1/i' $META`"
+    META_AUTHOR=_X_AC_META_GETVAL([AUTHOR]);
     if test -n "$META_AUTHOR"; then
       AC_DEFINE_UNQUOTED([META_AUTHOR], ["$META_AUTHOR"],
         [Define the project author.]
@@ -73,12 +68,9 @@ AC_DEFUN([X_AC_META], [
       AC_SUBST([META_AUTHOR])
     fi
 
-    META_LT_CURRENT="`perl -ne \
-      'print,exit if s/^\s*LT_CURRENT:\s*(\S+).*/\1/i' $META`"
-    META_LT_REVISION="`perl -ne \
-      'print,exit if s/^\s*LT_REVISION:\s*(\S+).*/\1/i' $META`"
-    META_LT_AGE="`perl -ne \
-      'print,exit if s/^\s*LT_AGE:\s*(\S+).*/\1/i' $META`"
+    META_LT_CURRENT=_X_AC_META_GETVAL([LT_CURRENT]);
+    META_LT_REVISION=_X_AC_META_GETVAL([LT_REVISION]);
+    META_LT_AGE=_X_AC_META_GETVAL([LT_AGE]);
     if test -n "$META_LT_CURRENT" \
          -o -n "$META_LT_REVISION" \
          -o -n "$META_LT_AGE"; then
@@ -102,4 +94,17 @@ AC_DEFUN([X_AC_META], [
 
   AC_MSG_RESULT([$_x_ac_meta_got_file])
   ]
+)
+
+AC_DEFUN([_X_AC_META_GETVAL], 
+  [`perl -n\
+    -e "BEGIN { \\$key=shift @ARGV; }"\
+    -e "next unless s/^\s*\\$key://i;"\
+    -e "s/^((?:@<:@^'\"#@:>@*(?:(@<:@'\"@:>@)@<:@^\2@:>@*\2)*)*)#.*/\\@S|@1/;"\
+    -e "s/^\s+//;"\
+    -e "s/\s+$//;"\
+    -e "s/^(@<:@'\"@:>@)(.*)\1/\\@S|@2/;"\
+    -e "\\$val=\\$_;"\
+    -e "END { print \\$val if defined \\$val; }"\
+    '$1' $META`]dnl
 )
